--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.calimero</groupId>
 	<artifactId>calimero-rxtx</artifactId>
-	<version>2.2.0-SNAPSHOT</version>
+	<version>2.2</version>
 	<name>Calimero rxtx Adapter</name>
 	<description>Adapter to use the rxtx library for serial communication</description>
 	<scm>
@@ -89,13 +89,27 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
 			<groupId>com.github.calimero</groupId>
 			<artifactId>calimero-core</artifactId>
-			<version>2.2-beta</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.rxtx</groupId>
