--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,9 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.rxtx</groupId>
-			<artifactId>rxtx</artifactId>
-			<version>2.1.7</version>
+			<groupId>com.neuronrobotics</groupId>
+			<artifactId>nrjavaserial</artifactId>
+			<version>3.11.0</version>
 		</dependency>
 	</dependencies>
 </project>
