Update .gitignore for gradle

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 
 # OS X
 .DS_Store
+
+# gradle
+.gradle
+build
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
