Add buildscript repo/dependency for versions plugin

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,11 @@ buildscript {
     repositories {
         mavenCentral()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+        jcenter()
     }
+    dependencies {
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+    }    
 }
 
 repositories {
