--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'maven'
 apply plugin: 'com.github.ben-manes.versions'
 
 group = 'com.github.calimero'
-version = '2.4-SNAPSHOT'
+version = '2.4-rc1'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
