Prepare for 2.4-rc2

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
 }
 
 repositories {
+    mavenLocal()
+    jcenter()
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
@@ -19,7 +21,7 @@ apply plugin: 'maven'
 apply plugin: 'com.github.ben-manes.versions'
 
 group = 'com.github.calimero'
-version = '2.4-rc1'
+version = '2.4-rc2'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
