--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,13 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
     }    
 }
 
 repositories {
+    mavenLocal()
+    jcenter()
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
@@ -50,5 +52,5 @@ sourceSets {
 dependencies {
     api "com.github.calimero:calimero-core:${version}"
     api 'org.slf4j:slf4j-api:1.8.0-beta2'
-    implementation 'com.neuronrobotics:nrjavaserial:3.13.0'
+    implementation 'com.neuronrobotics:nrjavaserial:3.14.0'
 }
