--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'maven'
 apply plugin: 'com.github.ben-manes.versions'
 
 group = 'com.github.calimero'
-version = '2.4-rc2'
+version = '2.4'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
