--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,15 @@
-buildscript {
-    repositories {
-        mavenCentral()
-        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.36.0'
-    }    
+plugins {
+  id "com.github.ben-manes.versions" version "0.36.0"
 }
 
 repositories {
     mavenLocal()
-    jcenter()
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 apply plugin:'java-library'
 apply plugin: 'maven'
-apply plugin: 'com.github.ben-manes.versions'
 
 group = 'com.github.calimero'
 version = '2.5-SNAPSHOT'
