--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin:'java-library'
 apply plugin: 'maven'
 
 group = 'com.github.calimero'
-version = '2.5-SNAPSHOT'
+version = '2.5-M1'
 
 sourceCompatibility = 11
 targetCompatibility = 11
