--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ targetCompatibility = 11
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
+javadoc.options.encoding = 'UTF-8'
+
 
 compileJava.options*.compilerArgs = [
 	'-Xlint:all',
