--- a/build.gradle
+++ b/build.gradle
@@ -109,5 +109,7 @@ publishing {
 }
 
 signing {
-    sign publishing.publications.mavenJava
+    if (project.hasProperty("signing.keyId")) {
+        sign publishing.publications.mavenJava
+    }
 }
