--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
 apply plugin:'java-library'
 
 group = 'com.github.calimero'
-version = '2.6-SNAPSHOT'
+version = '2.5.1'
 
 sourceCompatibility = 11
 targetCompatibility = 11
