--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 		<version>2.6-SNAPSHOT</version>
 	</parent>
 	<artifactId>calimero-rxtx</artifactId>
-	<name>Calimero rxtx provider</name>
-	<description>Adapter to use the rxtx library for serial communication</description>
+	<name>Calimero RXTX provider</name>
+	<description>Serial communication provider using RXTX</description>
 	<scm>
 		<url>https://github.com/calimero-project/calimero-rxtx.git</url>
 	</scm>
