--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.github.calimero</groupId>
+		<groupId>io.calimero</groupId>
 		<artifactId>calimero-parent</artifactId>
 		<version>2.6-SNAPSHOT</version>
 	</parent>
@@ -27,7 +27,7 @@
 	</developers>
 	<dependencies>
 		<dependency>
-			<groupId>com.github.calimero</groupId>
+			<groupId>io.calimero</groupId>
 			<artifactId>calimero-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
