--- a/build.gradle
+++ b/build.gradle
@@ -55,14 +55,14 @@ javadoc {
     options.addStringOption("-add-reads", "io.calimero.serial.provider.rxtx=ALL-UNNAMED")
 }
 
-tasks.withType(Jar) {
-	from("${projectDir}") {
+tasks.withType(Jar).configureEach {
+    from("${projectDir}") {
         include 'LICENSE.txt'
         into "META-INF"
     }
     if (name.equals('sourcesJar')) {
-    	from("${projectDir}") {
-		    include 'README.md', 'build.gradle', 'settings.gradle', 'gradle*/**'
+        from("${projectDir}") {
+            include 'README.md', 'build.gradle', 'settings.gradle', 'gradle*/**'
         }
     }
 }
