--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ tasks.withType(Jar).configureEach {
         include 'LICENSE.txt'
         into "META-INF"
     }
-    if (name.equals('sourcesJar')) {
+    if (name == 'sourcesJar') {
         from("${projectDir}") {
             include 'README.md', 'build.gradle', 'settings.gradle', 'gradle*/**'
         }
