Adjust mvn pom for building with java modules

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,29 @@
 			<email>b.malinowsky@gmail.com</email>
 		</developer>
 	</developers>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+						<arg>--add-reads</arg>
+						<arg>io.calimero.serial.provider.rxtx=ALL-UNNAMED</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<additionalOptions>
+						<additionalOption>--add-reads</additionalOption>
+						<additionalOption>io.calimero.serial.provider.rxtx=ALL-UNNAMED</additionalOption>
+					</additionalOptions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>io.calimero</groupId>
