--- a/resources/META-INF/native-image/io.calimero.serial.provider.rxtx/calimero-rxtx/native-image.properties
+++ b/resources/META-INF/native-image/io.calimero.serial.provider.rxtx/calimero-rxtx/native-image.properties
@@ -1,4 +1,5 @@
 Args = \
+--initialize-at-run-time=gnu.io.CommPortIdentifier \
 --initialize-at-run-time=gnu.io.RXTXCommDriver \
 --initialize-at-run-time=gnu.io.RXTXPort \
 --initialize-at-run-time=gnu.io.RXTXVersion \
